force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <pluralLabel>Facilities</pluralLabel>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>A client facility/site (hospital, aged care, or corporate location) that staffing requests are raised against. Master-detail to Account so read access follows the client Account.</description>
</CustomObject>