force-app/main/default/objects/Facility__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Only active facilities are offered to portal users when submitting a new staffing request.</description>
</CustomField>