force-app/main/default/objects/Facility__c/fields/Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Address_Postcode__c</fullName>
    <label>Postcode</label>
    <type>Text</type>
    <length>10</length>
</CustomField>