force-app/main/default/objects/Facility__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>50</length>
</CustomField>