force-app/main/default/objects/Facility__c/fields/Address_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Address_Suburb__c</fullName>
    <label>Suburb</label>
    <type>Text</type>
    <length>100</length>
</CustomField>