force-app/main/default/objects/Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Facilities</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Facility_Type__c</columns>
    <columns>Address_Suburb__c</columns>
    <columns>Active__c</columns>
</ListView>